--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,11 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
+
+    def nav_version = "2.4.2"
+
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
 }
